// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.devops.hicicd.Dictionary";
option java_outer_classname = "DictionaryProto";

// target package name
package protobuf;

// The greeting service definition.
service DictionaryService {
    // Sends a greeting
    rpc Get (DictionaryRequest) returns (DictionaryResponse) {
    }
}

message DictionaryRequest {
    string id = 1;
    string name = 2;
    int64 app_id = 3;
    int32 type = 4;
    string value = 5;
    int64 created_by = 6;
    int64 updated_by = 7;
    int64 created_time = 8;
    int64 update_time = 9;
    int32 deleted = 10;
}

message DictionaryResponse {
    int32 code = 1;
    string message = 2;
    repeated DictionaryRequest data = 3;
}